<resources>
    <string name="app_name">Dogger App</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="platos">Platos</string>
    <string name="perros">Perros</string>
    <string name="cost">Costillas</string>
    <string name="principal"></string>
    <string name="tipo1">Prueba Nuestros Productos</string>
    <string name="tipo2">Ven a celebrar con nosotros nuestros fines de semana de descuentos </string>
    <string name="splash">Dogger App</string>
    <string name="usuario">Usuario:</string>
    <string name="contra">Contraseña:</string>
    <string name="recontra">Repetir Contraseña:</string>
    <string name="correo">Correo Electronico:</string>
    <string name="aceptar">Entrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="Hamburguesa">Hamburguesas</string>
    <string name="reg">Registro</string>
    <string name="clas">Calificar</string>
    <string name="casi1">Califica el restaurante con un numero del 1 al 10</string>
    <string name="casi2">Califica la aplicacion con un numero del 1 al 10</string>
    <string name="casi3">Gracias por ayudarnos a ser mejores !</string>

    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
