<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielcorrea.doggergrill.register"
    android:orientation="vertical"
    android:background="@color/black">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:text="@string/usuario"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:id="@+id/user"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="@string/contra"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:id="@+id/pass"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:text="@string/recontra"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:id="@+id/repass"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:text="@string/correo"
        android:textSize="30dp"
        android:layout_weight="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:layout_weight="1"
        android:id="@+id/mail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/aceptar"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="30dp"

            android:id="@+id/acept"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:background="@color/white"
            android:id="@+id/cancel"
            android:textSize="30dp"/>


    </LinearLayout>

</LinearLayout>
