<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielcorrea.doggergrill.clasi">

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="@string/casi1"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:inputType="number"
        android:id="@+id/casi1"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="@string/casi2"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:inputType="number"
        android:id="@+id/casi2"
        android:textSize="30dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clas"
        android:textSize="30dp"
        android:id="@+id/calis"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:text="@string/casi3"

        android:id="@+id/casi3"
        android:textSize="30dp"/>


</LinearLayout>
