<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielcorrea.doggergrill.loggin"
    android:orientation="vertical"
    android:background="@color/black"
    >
    <ImageView
        android:layout_width="381dp"
        android:layout_height="0dp"
        android:src="@drawable/dogger2"
        android:layout_weight="3"
        android:layout_gravity="top" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/usuario"
        android:textColor="@color/white"
        android:textSize="30dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:id="@+id/usser"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/contra"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_weight="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:id="@+id/paass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/ok"
            android:text="@string/aceptar"
            android:textSize="30dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/reg"
            android:id="@+id/reg"
            android:textSize="25dp"/>


    </LinearLayout>

</LinearLayout>
